[PhuHV] More refactor.